dump current state
