# src/main/openapi_server/models/__init__.py
@@ -1,30 +1,0 @@
-# coding: utf-8
-
-# flake8: noqa
-from __future__ import absolute_import
-
-# import models into model package
-from openapi_server.models.basic_error_object import BasicErrorObject
-from openapi_server.models.country import Country
-from openapi_server.models.error400 import Error400
-from openapi_server.models.error400_all_of import Error400AllOf
-from openapi_server.models.error401 import Error401
-from openapi_server.models.error401_all_of import Error401AllOf
-from openapi_server.models.error403 import Error403
-from openapi_server.models.error403_all_of import Error403AllOf
-from openapi_server.models.error404 import Error404
-from openapi_server.models.error404_all_of import Error404AllOf
-from openapi_server.models.error406 import Error406
-from openapi_server.models.error406_all_of import Error406AllOf
-from openapi_server.models.error409 import Error409
-from openapi_server.models.error409_all_of import Error409AllOf
-from openapi_server.models.error422 import Error422
-from openapi_server.models.error422_all_of import Error422AllOf
-from openapi_server.models.error429 import Error429
-from openapi_server.models.error429_all_of import Error429AllOf
-from openapi_server.models.event import Event
-from openapi_server.models.event_list_response_body import EventListResponseBody
-from openapi_server.models.event_response_body import EventResponseBody
-from openapi_server.models.event_type import EventType
-from openapi_server.models.location import Location
-from openapi_server.models.region import Region
